...
        />
        <Tabs.Screen
          name="more"
          options={{
            title: 'More',
            tabBarButtonTestID: 'tab-more',
            tabBarAccessibilityLabel: 'More Tab',
            tabBarIcon: ({ focused }) => (
              <TabIcon name="More" focused={focused} />
            ),
          }}
        />
        <Tabs.Screen
...
